# examiner-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  REPORT.md  app.py  cli.py  demo.html  pyproject.toml  render.yaml  requirements.txt  server.py
data/evidence_corpus/: SOURCES.md  corpus.json
data/technique_library/: techniques.json
data/testset/: testset.json
eval/: __init__.py  harness.py  metrics.py
factchecker/: __init__.py  cli_entry.py  config.py  graph.py  llm.py  models.py  report_format.py  runner.py  state.py
factchecker/nodes/: __init__.py  adversarial_debate.py  extract_claims.py  formatting.py  judge.py  retrieve_evidence.py  synthesize.py  tag_techniques.py
factchecker/prompts/: __init__.py  defense.txt  extract_claims.txt  judge.txt  prosecution.txt  prosecution_rebuttal.txt  rebuttal.txt  self_refute.txt  tag_techniques.txt
factchecker/rag/: __init__.py  evidence_retriever.py  ingest.py  technique_retriever.py  vectorstore.py  web_search.py
tests/: conftest.py  test_config.py  test_debate.py  test_extract_claims.py  test_graph_compiles.py  test_graph_topology.py  test_judge_guards.py  test_judge_transcript.py  test_models.py  test_nodes.py  test_rag.py  test_retriever.py  test_routing.py  test_state_reducers.py  test_synthesize.py
web/: index.html
