[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factchecker"
version = "0.1.0"
description = "Rumor Verification Agent: LangGraph multi-agent adversarial fact-checker"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "examiner-agent term project" }]
dependencies = [
    "langgraph>=0.2,<2.0",
    "langchain>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-google-genai>=2.0",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["factchecker*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 한국어 주석/프롬프트가 많아 E501(라인 길이)은 line-length=100 으로 관리
ignore = ["E741"]
